k8s/gitops/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend-image
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /api-docs
              port: 8081
            initialDelaySeconds: 25
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api-docs
              port: 8081
            initialDelaySeconds: 45
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 8081
      targetPort: 8081
